fixed overflow problem

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -173,6 +173,8 @@ table tbody td:nth-child(1) {
     max-width: 75vw;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     position: relative;
+    overflow-y: auto;
+    max-height: 95vh;
 }
 
 /* Close button in corner */
